menu flexbox alignment fixes

--- a/src/styles/specific/_navbar.scss
+++ b/src/styles/specific/_navbar.scss
@@ -17,6 +17,10 @@
       color: $lightBlue;
     }
 
+    &.active {
+      color: $lightBlue;
+    }
+
     &.active::after {
       content: " ";
       display: block;
