--- a/src/styles/specific/_navmap.scss
+++ b/src/styles/specific/_navmap.scss
@@ -14,6 +14,7 @@
 }
 
 .navMapWrapper {
+    @include wrapperWidth;
     @include flexCenter(column);
     align-items: flex-start;
     
@@ -31,8 +32,9 @@
 }
 
 .navMap {
-    @include wrapperWidth;
+
     @include flexCenter(row);
+    width: 100%;
     justify-content: space-between;
     align-items: stretch;
 
