--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -111,6 +111,9 @@ p {
 #navbar button:hover {
   color: #0087f5;
 }
+#navbar button.active {
+  color: #0087f5;
+}
 #navbar button.active::after {
   content: " ";
   display: block;
@@ -183,6 +186,10 @@ p {
 }
 
 .navMapWrapper {
+  display: block;
+  width: 95%;
+  max-width: 1104px;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -201,14 +208,11 @@ p {
 }
 
 .navMap {
-  display: block;
-  width: 95%;
-  max-width: 1104px;
-  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
+  width: 100%;
   justify-content: space-between;
   align-items: stretch;
 }
